fix: aos overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,13 +9,18 @@
     overflow-y: overlay;
   }
 
+  html {
+    @apply overflow-x-hidden;
+  }
+
   body {
-    color: var(--font-color);
+    @apply container mx-auto flex justify-center;
     scroll-behavior: smooth;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    color: var(--font-color);
     background-color: var(--background-color);
   }
 
